@@ -1,3 +1,4 @@
 DIST django-rest-framework-2.4.4.tar.gz 1699591 SHA256 16ae608a65af3b6bfe35323066da719bae6ff5db34bcd8cd129ed9c48fc36ba9 SHA512 b5d7768ad805b5b897bfa28390cb3abdc44a955ea409d4487c7553a164f8f75fb9e0a95887522a45707f33d4df4e7f9eea5c50e7ae12f31cd32aecbd9e0a89de WHIRLPOOL cfb5c9eb6fc293925add57c98182cb7f91c1f816dc6ece47450402247287e134dad37f3d34632c0e7994558e1e8c93a1a0e61cdd394c179a32965deb5c3fbf61
 DIST django-rest-framework-3.0.2.tar.gz 1758070 SHA256 9528c1b36407a85df248a44fdf696b97410889992ba441efb257a6e9f704f9c1 SHA512 785b373d26476f42d948e4a43569a8a0c283b04aecc4d72ec161f88b805089a30f19e42255d43d475bd019c16c9b8982808d80f7e6671a62fc84aa4d808b4e05 WHIRLPOOL 16e58d88d3914012c10aa750934c020082fcc0773448bc4c061a8ee88c7cb789e8b0798e5f87678646a776885eafb109a277aa3869f0f8c2f12a8a66ca6d0d24
 DIST django-rest-framework-3.1.1.tar.gz 1865926 SHA256 44bd6e7e924bac90b976f0cafea35671f9e5975b10af3241ee26d6c5340c4b91 SHA512 92d9c7876373f1c9d76e37ddcfeec9ae5e72e017dad04c29a5624bd8fc578f25a0fa7d24423036b278ff0c4024572f606dfb755afbba2c9f91a8e9df012ee198 WHIRLPOOL fcb9e380ca72aef76ad48e57e5f73547099f81362ce76166613c986487be68825eb6e27bb6f24fa24515250aa33622ba231ad176c94bf5f5f2a14f8e897bfb57
+DIST django-rest-framework-3.1.2.tar.gz 1868098 SHA256 d19139d82a62b950324298579d74a1f3761ee4800880ae75de42a066810550f1 SHA512 95c0987361429927ba54eadc080d8aa7cbd76bf29a20ae339d750dfaf215eaf9f3672fd835c0d1afa403caae6d9a8bb79f5c134fe4cf42afd54ec4aef390ddfe WHIRLPOOL dd49b168b7f4b30642c3d448cc642bd402c1fd94c153b33de8473dbb0e9f67a6cb44ee10b8c41e612a321f39b4d444b6e02121b9d7c9c5f0e1c8e2aa282c3b2c
